third_party/llvm-project/clang/test/Frontend/verify-directive.h
// Check that directives inside includes are included!
// expected-error@1 {{include file test}}
